2005-12-30  A Balamurugan  <bala@zresearch.com>

	* fish/bmc-config.8.pre.in: fish/bmc-config.8.in is renamed and
	updated.

	* fish/fish.8.pre.in: fish/fish.8.in is renamed and updated.

	* fish/ipmi-sel.8.pre.in: fish/ipmi-sel.8.in is renamed and
	updated.

	* fish/ipmi-sensors.8.pre.in: fish/ipmi-sensors.8.in is renamed
	and updated.

	* ipmi-raw/doc/ipmi-raw.8.pre.in: ipmi-raw/ipmi-raw.8 is renamed
	and moved and updated.

	* configure.ac, bmc-info/doc/Makefile.am,
	bmc-info/doc/bmc-info.8.pre.in, fish/Makefile.am,
	ipmi-raw/Makefile.am: updated.

2005-12-29  Anand Babu  <ab@zresearch.com>

	* bmc-info/doc/Makefile.am: Man pages are now pre-processed to
	include common arguments file using cpp.
	(man.N.pre.in --autoconf--> man.N.pre --cpp--> man.N).
	
	* bmc-info/doc/bmc-info.8.in: Replaced by bmc-info.8.pre.in

	* configure.ac: produces bmc-info.8.pre.

2005-12-28  A Balamurugan  <bala@zresearch.com>

	* common/doc/argp-common.man: added new file.

	* bmc-info/doc/Makefile.am: updated.

2005-12-28  A Balamurugan  <bala@zresearch.com>

	* fish/bmc-info.8.in, fish/scripts/bmc-info/Makefile.am,
	fish/scripts/bmc-info/bmc-info.in: removed.

	* bmc-info/Makefile.am, bmc-info/doc/Makefile.am,
	bmc-info/doc/bmc-info.8.in, bmc-info/src/Makefile.am,
	bmc-info/src/bmc-info-argp.c, bmc-info/src/bmc-info-argp.h,
	bmc-info/src/bmc-info.c: now bmc-info is in C.

	* Makefile.am, configure.ac, fish/Makefile.am,
	fish/scripts/Makefile.am: updated.

2005-12-28  A Balamurugan  <bala@zresearch.com>

	* fish/extensions/bc-common.scm, fish/extensions/pef.scm,
	fish/extensions/sel.scm, fish/extensions/sensors-common.scm: fixed
	argument parsing bug.

	* libfreeipmi/src/ipmi-interface.c (ipmi_cmd): accepts lun, net_fn
	as arguments.

	* libfreeipmi/src/ipmi-chassis-cmds.c,
	libfreeipmi/src/ipmi-dev-global-cmds.c,
	libfreeipmi/src/ipmi-lan-cmds.c,
	libfreeipmi/src/ipmi-msg-support-cmds.c,
	libfreeipmi/src/ipmi-pef-cmds.c,
	libfreeipmi/src/ipmi-sdr-repo-cmds.c,