@@ -1,0 +1,2 @@
+EXTRA_DIST = argp-common.h argp-common.c
+
