@@ -1,4 +1,3 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
 .TH FREEIPMI "1" "December 2005" "FreeIPMI Raw [ipmi-raw-0.2.0]" "User Commands"
 .SH NAME
 FreeIPMI \- manual page for FreeIPMI Raw [ipmi-raw-0.2.0]
